hphp/test/slow/reified_generics/higher-kinded-generics.php.expectf
Fatal error: Cannot have higher kinded reified generics in %s on line 6
